--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -229,9 +229,11 @@
 <!-- Rodapé página -->
 <footer class="page-footer font-small special-color-dark pt-3">
     <div class="container">
-        <div class="footer-copyright text-center py-1">Coded by: GiovanniCarvalheira
+        <div class="footer-copyright text-center py-1"><b>Coded by: GiovanniCarvalheira</b>
             <br>
+            <b>
             <a href="https://github.com/GiovanniCarvalheira"> Github.com/GiovanniCarvalheira</a>
+        </b>
         </div>
     </div>
 </footer>
